 * Changed the default search results size to 20 as 100 was very slow.
 * Added some missing phrases
 * Screens now ignore "login" action (which sometimes get sent
    if someone hits back/reload after logging in)
 * Styled Pagination

2006-10-20 cjg
 * Renamed /perl/ to /cgi/
 * Improved rendering of details tab
 * Removed test script lookup_demo
 * Changed export text on search
 * Fixed typo in workflow/eprint/default.xml

2006-10-20 cjg
 * Renamed neat citation to result
 * Added a warning for the case of a citation style not existing.
 * Removed hide from metadata visibility
 * Changed citations files to neatly redirect user.brief to default

2006-10-20 cjg
 * Fixed some issues in platform code

2006-10-23 moj
 * Moved several bin/indexer functions into Index.pm
 * Added tick file (separate from pid file)
 * Added functions to Index.pm to allow start/stop from within EPrints
    (these call bin/indexer)
 * Added is_empty function to XML.pm to return true if node has no
     children.

2006-10-23 moj
 * Added is_running to Index
 * Added actions for start/stop indexer and force-config reload
 * Added necessary phrases
 * Added roles to admin
 (nb: known bug - indexer currently stopping on apache reload)

2006-10-23 moj
 * Fixed indexer spawning in Index.pm
 * Created Admin/Indexer.pm and Admin/Reload.pm and moved actions
    into the correct places.
 * Added render_common_actions to Status, as Reload/Indexer extend
    it.
 * Renamed phrases and added Admin/Indexer:title
 * Added a setsid to indexer
 * Added _run_indexer to avoid redundant code
  
2006-10-23 cjg
 * Moved collapse conditions to EPrints::XML::EPC::process
 * Added screen citiation formats for headers of EPrint and User screens.
 * Modified generate_static to find title and body directly rather than
    use XML::find_elements
 * Removed now unused XML::find_elements

2006-10-23 cjg
 * Login now no longer talks about IPs and sessions. We can maybe add those
    features later.